raw/syntex-0.42.2--2016-11-11-11-03-50--1.log
commit ba2e892249d51cce0980e95e0b4daabb7710ad82
Merge: 4da129d 43aed32
Author: bors <bors@rust-lang.org>
Date:   Fri Nov 11 05:55:04 2016 -0800

    Auto merge of #37447 - estebank:non-duplicate-definition-error, r=nrc
    
    Show one error for duplicated type definitions
    
    For the following code:
    
    ``` rustc
    struct Bar;
    struct Bar;
    
    fn main () {
    }
    ```
    
    show
    
    ``` nocode
    error[E0428]: a type named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error: aborting due to previous error
    ```
    
    instead of
    
    ``` nocode
    error[E0428]: a type named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error[E0428]: a value named `Bar` has already been defined in this module
      --> src/test/compile-fail/E0428.rs:12:1
       |
    11 | struct Bar;
       | ----------- previous definition of `Bar` here
    12 | struct Bar;
       | ^^^^^^^^^^^
    
    error: aborting due to 2 previous errors
    ```
    
    Fixes #35767.
rustc: ./syntex-0.42.2
cargo rustc -p syntex_syntax  -- -Ztime-passes -Zinput-stats
   Compiling syntex_syntax v0.42.0
time: 0.092; rss: 70MB	parsing
Lines of code:             33687
Pre-expansion node count:  223115
time: 0.000; rss: 70MB	recursion limit
time: 0.000; rss: 70MB	crate injection
time: 0.000; rss: 70MB	plugin loading
time: 0.000; rss: 70MB	plugin registration
time: 0.230; rss: 144MB	expansion
time: 0.000; rss: 144MB	maybe building test harness
time: 0.006; rss: 144MB	maybe creating a macro crate
Post-expansion node count: 638863
time: 0.000; rss: 144MB	checking for inline asm in case the target doesn't support it
time: 0.012; rss: 144MB	complete gated feature checking
time: 0.023; rss: 144MB	early lint checks
time: 0.007; rss: 144MB	AST validation
time: 0.076; rss: 158MB	name resolution
time: 0.044; rss: 184MB	lowering ast -> hir
time: 0.008; rss: 194MB	indexing hir
time: 0.006; rss: 194MB	attribute checking
time: 0.004; rss: 150MB	language item collection
time: 0.010; rss: 150MB	lifetime resolution
time: 0.000; rss: 150MB	looking for entry point
time: 0.000; rss: 150MB	looking for plugin registrar
time: 0.040; rss: 171MB	region resolution
time: 0.005; rss: 171MB	loop checking
time: 0.004; rss: 171MB	static item recursion checking
time: 0.327; rss: 160MB	compute_incremental_hashes_map
time: 0.000; rss: 160MB	load_dep_graph
time: 0.040; rss: 170MB	type collecting
time: 0.001; rss: 170MB	variance inference
time: 0.018; rss: 173MB	coherence checking
time: 0.091; rss: 175MB	wf checking
time: 0.184; rss: 185MB	item-types checking
time: 3.296; rss: 233MB	item-bodies checking
time: 0.000; rss: 233MB	drop-impl checking
time: 0.215; rss: 253MB	const checking
time: 0.044; rss: 253MB	privacy checking
time: 0.005; rss: 253MB	stability index
time: 0.017; rss: 253MB	intrinsic checking
time: 0.014; rss: 253MB	effect checking
time: 0.045; rss: 253MB	match checking
time: 0.048; rss: 237MB	liveness checking
time: 0.177; rss: 237MB	rvalue checking
time: 0.373; rss: 436MB	MIR dump
  time: 0.056; rss: 438MB	SimplifyCfg
  time: 0.073; rss: 438MB	QualifyAndPromoteConstants
  time: 0.097; rss: 438MB	TypeckMir
  time: 0.004; rss: 438MB	SimplifyBranches
  time: 0.030; rss: 438MB	SimplifyCfg
time: 0.260; rss: 438MB	MIR cleanup and validation
time: 0.479; rss: 439MB	borrow checking
time: 0.025; rss: 439MB	reachability checking
time: 0.038; rss: 439MB	death checking
time: 0.030; rss: 441MB	stability checking
time: 0.000; rss: 441MB	unused lib feature checking
time: 0.196; rss: 441MB	lint checking
time: 0.000; rss: 441MB	resolving dependency formats
  time: 0.003; rss: 441MB	NoLandingPads
  time: 0.026; rss: 441MB	SimplifyCfg
  time: 0.061; rss: 449MB	EraseRegions
  time: 0.011; rss: 449MB	AddCallGuards
  time: 0.266; rss: 464MB	ElaborateDrops
  time: 0.003; rss: 464MB	NoLandingPads
  time: 0.052; rss: 464MB	SimplifyCfg
  time: 0.028; rss: 464MB	InstCombine
  time: 0.012; rss: 464MB	Deaggregator
  time: 0.002; rss: 464MB	CopyPropagation
  time: 0.034; rss: 464MB	SimplifyLocals
  time: 0.009; rss: 464MB	AddCallGuards
  time: 0.003; rss: 464MB	PreTrans
time: 0.511; rss: 464MB	MIR optimisations
  time: 0.059; rss: 476MB	write metadata
  time: 0.388; rss: 485MB	translation item collection
  time: 0.055; rss: 493MB	codegen unit partitioning
  time: 0.048; rss: 743MB	internalize symbols
time: 4.437; rss: 743MB	translation
time: 0.000; rss: 743MB	assert dep graph
time: 0.000; rss: 743MB	serialize dep graph
  time: 0.537; rss: 420MB	llvm function passes [0]
  time: 0.252; rss: 430MB	llvm module passes [0]
  time: 10.430; rss: 428MB	codegen passes [0]
  time: 0.000; rss: 428MB	codegen passes [0]
time: 12.017; rss: 428MB	LLVM passes
time: 0.000; rss: 428MB	serialize work products
time: 0.339; rss: 105MB	linking
done
